# spicetools

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build_all.sh  build_msvc.py  changelog.txt  licenses.txt  readme.txt
acio/: acio.cpp  acio.h  module.h
acio/bi2a/: bi2a.cpp  bi2a.h
acio/bmpu/: bmpu.cpp  bmpu.h
acio/core/: core.cpp  core.h
acio/hbhi/: hbhi.h
acio/hdxs/: hdxs.h
acio/hgth/: hgth.cpp  hgth.h
acio/i36g/: i36g.cpp  i36g.h
acio/i36i/: i36i.h
acio/icca/: icca.cpp  icca.h
acio/j32d/: j32d.h
acio/kfca/: kfca.cpp  kfca.h
acio/klpa/: klpa.cpp  klpa.h
acio/mdxf/: mdxf.cpp  mdxf.h
acio/nddb/: nddb.cpp  nddb.h
acio/panb/: panb.cpp  panb.h
acio/pix/: pix.cpp  pix.h
acio/pjec/: pjec.h
acio/pjei/: pjei.cpp  pjei.h
acio2emu/firmware/: bi2x.cpp
acioemu/: acioemu.cpp  acioemu.h  bi2a.h  device.cpp  device.h  handle.cpp  handle.h  icca.cpp  icca.h
api/: controller.cpp  controller.h  module.cpp  module.h  request.cpp  request.h  response.cpp  response.h  serial.h  websocket.cpp  websocket.h
api/modules/: analogs.cpp  analogs.h  buttons.h  capture.cpp  capture.h  card.h  coin.h  control.cpp  control.h  info.h  keypads.cpp  keypads.h  lcd.cpp  lcd.h  lights.cpp  lights.h  memory.cpp  memory.h  touch.cpp  touch.h
avs/: automap.cpp  automap.h  core.cpp  core.h  ea3.cpp  ea3.h  game.cpp  game.h
cfg/: Win32D.rc  analog.cpp  analog.h  api.cpp  api.h  button.cpp  button.h  config.cpp  config.h  configurator.cpp  configurator.h  configurator_wnd.cpp  configurator_wnd.h  game.cpp  game.h  icon.rc  light.cpp  light.h  manifest.h  manifest.manifest  manifest.rc  option.cpp  option.h  resource.h  screen_resize.cpp  screen_resize.h  spicecfg.cpp  spicecfg.h
easrv/: easrv.cpp  easrv.h  smartea.cpp  smartea.h
easrv/responses/: bs_info2_common.h  bs_pcb2_boot.h  bs_pcb2_error.h  op2_common_get_music_info.h  pcbtracker_alive.h
easrv/responses_raw/: update_responses.sh
games/: game.cpp  game.h  io.cpp  io.h
games/bbc/: bbc.cpp  bbc.h  io.cpp  io.h
games/bc/: bc.cpp  io.cpp  io.h  node.h
games/bs/: bs.cpp  bs.h  io.cpp  io.h
games/ddr/: ddr.cpp  ddr.h  io.cpp  io.h
games/dea/: dea.cpp  dea.h  io.cpp  io.h
games/drs/: drs.cpp  drs.h  io.cpp  io.h
games/ftt/: ftt.cpp  ftt.h  io.cpp  io.h  nui.h
games/gitadora/: gitadora.cpp  gitadora.h  io.cpp  io.h
games/hpm/: hpm.cpp  hpm.h  io.cpp  io.h
games/iidx/: bi2a.cpp  bi2a.h  bi2x.cpp  bi2x.h  bi2x_hook.cpp  bi2x_hook.h  ezusb.cpp  ezusb.h  iidx.cpp  iidx.h  io.cpp  io.h
games/jb/: io.cpp  io.h  jb.cpp  jb.h
games/loveplus/: io.cpp  io.h  loveplus.cpp  loveplus.h
games/mfc/: io.cpp  io.h  mfc.cpp  mfc.h
games/mga/: gunio.cpp  gunio.h  io.cpp  io.h  mga.cpp  mga.h
games/museca/: io.cpp  io.h
games/nost/: io.cpp  io.h  nost.cpp  nost.h
games/otoca/: io.cpp  io.h  otoca.cpp  otoca.h  p4io.cpp  p4io.h
games/pcm/: io.cpp  io.h  pcm.cpp  pcm.h
games/popn/: io.cpp  io.h  popn.cpp  popn.h
games/qma/: ezusb.cpp  ezusb.h  io.cpp  io.h  qma.cpp  qma.h
games/rb/: io.cpp  io.h  rb.h  touch.cpp  touch.h
games/rf3d/: io.cpp  io.h  rf3d.cpp  rf3d.h
games/sc/: io.cpp  io.h  sc.cpp  sc.h
games/scotto/: io.cpp  io.h  scotto.cpp  scotto.h
games/sdvx/: bi2x_hook.cpp  camera.cpp  camera.h  io.cpp  io.h  sdvx.cpp  sdvx.h
games/shared/: lcdhandle.cpp  lcdhandle.h  printer.cpp  printer.h  twtouch.cpp  twtouch.h
games/shogikai/: io.cpp  io.h  shogikai.cpp  shogikai.h
games/silentscope/: io.cpp  io.h  silentscope.cpp  silentscope.h
games/we/: io.cpp  io.h  touchpanel.cpp  touchpanel.h  we.cpp  we.h
hooks/: avshook.cpp  avshook.h  cfgmgr32hook.cpp  cfgmgr32hook.h  debughook.cpp  debughook.h  devicehook.cpp  devicehook.h  lang.cpp  lang.h  libraryhook.cpp  libraryhook.h  networkhook.cpp  networkhook.h  rom.cpp  rom.h  setupapihook.h  sleephook.cpp  sleephook.h  unisintrhook.cpp  unisintrhook.h
hooks/audio/: audio.cpp  audio.h  audio_private.h  buffer.cpp  util.cpp  util.h
hooks/graphics/: graphics.cpp  graphics.h
launcher/: launcher.cpp  launcher.h  logger.cpp  logger.h  options.cpp  options.h  richpresence.cpp  richpresence.h  shutdown.cpp  shutdown.h  signal.cpp  signal.h  superexit.cpp  superexit.h
misc/: bt5api.cpp  bt5api.h  clipboard.cpp  clipboard.h  device.cpp  device.h  eamuse.cpp  eamuse.h  extdev.cpp  extdev.h  sciunit.cpp  sciunit.h  sde.cpp  sde.h  vrutil.cpp  vrutil.h  wintouchemu.cpp  wintouchemu.h
overlay/: overlay.cpp  overlay.h  window.cpp  window.h
overlay/imgui/: extensions.cpp  extensions.h  impl_dx9.cpp  impl_dx9.h  impl_spice.cpp  impl_spice.h  impl_sw.h
overlay/windows/: acio_status_buffers.cpp  acio_status_buffers.h  card_manager.cpp  card_manager.h  config.cpp  config.h  control.cpp  control.h  eadev.h  fps.cpp  fps.h  iidx_sub.cpp  iidx_sub.h  keypad.cpp  keypad.h  kfcontrol.cpp  kfcontrol.h  log.cpp  log.h  midi.cpp  midi.h  patch_manager.cpp  patch_manager.h  screen_resize.cpp  screen_resize.h  sdvx_sub.cpp  sdvx_sub.h  vr.cpp  vr.h  wnd_manager.h
rawinput/: device.h  hotplug.cpp  hotplug.h  piuio.cpp  piuio.h  rawinput.cpp  rawinput.h  sextet.cpp  sextet.h  touch.cpp  touch.h
reader/: crypt.cpp  crypt.h  message.cpp  message.h  reader.cpp  reader.h  structuredmessage.cpp  structuredmessage.h
script/: instance.cpp  instance.h  lib.cpp  lib.h  manager.cpp  manager.h
script/api/: analogs.cpp  analogs.h  buttons.cpp  buttons.h  capture.cpp  capture.h  card.cpp  card.h  coin.cpp  coin.h  control.cpp  control.h  drs.cpp  drs.h  iidx.cpp  iidx.h  info.cpp  info.h  keypads.cpp  keypads.h  lcd.cpp  lcd.h  (+6 more)
stubs/: stubs.cpp  stubs.def  stubs.h
touch/: handler.h  touch.cpp  touch.h  win7.cpp  win7.h  win8.cpp  win8.h
util/: circular_buffer.h  co_task_mem_ptr.h  cpuutils.cpp  cpuutils.h  crypt.cpp  crypt.h  detour.cpp  fileutils.cpp  fileutils.h  flags_helper.h  libutils.cpp  libutils.h  logging.cpp  logging.h  lz77.cpp  lz77.h  memutils.cpp  memutils.h  netutils.cpp  netutils.h  peb.cpp  peb.h  rc4.cpp  rc4.h  resutils.cpp  resutils.h  sigscan.cpp  sigscan.h  time.cpp  time.h  unique_plain_ptr.h  utils.cpp  utils.h
(+104 files in other folders)
